--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -13,9 +13,11 @@
       "PENDING": "等待处理",
       "PROGRESS": "进行中",
       "COMPLETE": "已完成",
-      "ACCEPTED": "已验收"
+      "ACCEPTED": "已验收",
+      "ACTIVE": "正常"
     },
-    "error": "抱歉，请稍后重试！"
+    "error": "抱歉，请稍后重试！",
+    "action": "操作"
   },
   "navigator": {
     "signIn": "登录",
@@ -175,9 +177,6 @@
     "checkTitle": "请填写任务标题",
     "checkDays": "请设置任务天数",
     "checkDetail": "请描述任务详情"
-
-
-
   },
   "job": {
     "publish": "发布任务",
@@ -303,7 +302,12 @@
     "btCreate": "创建团队",
     "tip1": "创建团队成功",
     "errName": "请输入团队名称",
-    "errDescription": "请描述团队信息"
+    "errDescription": "请描述团队信息",
+    "btAddMember": "添加团队成员",
+    "addNewMemberTitle": "添加团队成员",
+    "addNewMemberTip1": "请输入要添加成员的电话号码",
+    "addToMyTeam": "添加到我的团队",
+    "tip2": "添加成功!"
   },
   "syserr": {
     "10024": "用户名或密码错误",
@@ -361,6 +365,9 @@
     "30021": "对方已阅读该日志，不能删除",
     "30022": "你只能删除你自己创建的日志",
     "30023": "只有日志创建人才能修改日志",
-    "30024": "对方已阅读该日志，不能修改了"
+    "30024": "对方已阅读该日志，不能修改了",
+    "30025": "你不是团队管理员，不能添加成员",
+    "30026": "不能添加自己",
+    "30027": "该用户已经是团队成员了"
   }
 }
