--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -308,7 +308,13 @@
     "addNewMemberTitle": "添加团队成员",
     "addNewMemberTip1": "请输入要添加成员的电话号码",
     "addToMyTeam": "添加到我的团队",
-    "tip2": "添加成功!"
+    "tip2": "添加成功!",
+    "manager": "管理员",
+    "normal": "团队成员",
+    "btDelete": "开除",
+    "tipDeleteSuccess": "开除成功",
+    "btListTeam": "选择任务团队",
+    "btListMember": "选择任务负责人"
   },
   "syserr": {
     "10024": "用户名或密码错误",
@@ -369,6 +375,7 @@
     "30024": "对方已阅读该日志，不能修改了",
     "30025": "你不是团队管理员，不能添加成员",
     "30026": "不能添加自己",
-    "30027": "该用户已经是团队成员了"
+    "30027": "该用户已经是团队成员了",
+    "30028": "要删除的用户不是该团队成员"
   }
 }
