完成了团队指定任务

--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -314,7 +314,9 @@
     "btDelete": "开除",
     "tipDeleteSuccess": "开除成功",
     "btListTeam": "选择任务团队",
-    "btListMember": "选择任务负责人"
+    "btListMember": "选择任务负责人",
+    "selectTeam": "选择执行团队",
+    "selectTeamMember": "选择任务执行人"
   },
   "syserr": {
     "10024": "用户名或密码错误",
@@ -376,6 +378,10 @@
     "30025": "你不是团队管理员，不能添加成员",
     "30026": "不能添加自己",
     "30027": "该用户已经是团队成员了",
-    "30028": "要删除的用户不是该团队成员"
+    "30028": "要删除的用户不是该团队成员",
+    "30029": "指定的团队不存在",
+    "30030": "指定的用户不存在",
+    "30031": "不能将任务指定给自己",
+    "30032": "指定团队时，需要指定执行任务的团队成员"
   }
 }
