--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -17,7 +17,8 @@
       "ACTIVE": "正常"
     },
     "error": "抱歉，请稍后重试！",
-    "action": "操作"
+    "action": "操作",
+    "btSaving": "保存中..."
   },
   "navigator": {
     "signIn": "登录",
@@ -72,7 +73,6 @@
     "createTeam": "创建团队",
     "userRealname": "用户实名认证",
     "maintenance": "系统维护"
-
   },
   "user": {
     "username": "登录名",
@@ -287,7 +287,7 @@
     "realname": {
       "title1": "用户实名认证申请",
       "realname": "真实姓名",
-      "idcardno":"身份证号码",
+      "idcardno": "身份证号码",
       "status1": "正常",
       "verify1": "等待审核",
       "btAgree": "通过",
@@ -304,6 +304,11 @@
     "maintenance": {
       "overdueJobsSuccess": "已清理完所有过期任务",
       "btJobOverdue": "清理过期任务"
+    },
+    "withdraw": {
+      "btProcess": "处理",
+      "btAgreeWithdraw": "同意取现",
+      "agreeWithdrawSuccess": "取现成功"
     }
   },
   "account": {
@@ -393,7 +398,7 @@
     "30005": "只能删除等待匹配的任务",
     "30014": "您没有创建任务日志的权限",
     "30015": "没有查找到该任务的验收申请日志",
-    "30016":"只能验收通过进行中或者已完成的任务",
+    "30016": "只能验收通过进行中或者已完成的任务",
     "30017": "该任务已经有人申请了，不能修改了",
     "30018": "该任务不是等待申请状态，不能修改",
     "30019": "网络错误",
@@ -410,6 +415,8 @@
     "30030": "指定的用户不存在",
     "30031": "不能将任务指定给自己",
     "30032": "指定团队时，需要指定执行任务的团队成员",
-    "30033": "该用户还没有提交实名认证申请"
+    "30033": "该用户还没有提交实名认证申请",
+    "30034": "该取现申请已经处理过了",
+    "30035": "没有查询到该取现申请"
   }
 }
